# AIFES_for_PC

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  old_make
src/: aifes_basic.h  aifes_config.h  main copy 2.c  main copy 3.c  main copy.c  main.c  main_inf_only.c
src/basic/base/aialgo/: aialgo_sequential_inference.c
src/basic/base/ailayer/: ailayer_l2norm.c  ailayer_l2norm.h  ailayer_layer_normalization.c  ailayer_layer_normalization.h
src/basic/default/ailayer/: ailayer_l2norm_default.c  ailayer_l2norm_default.h  ailayer_layer_normalization_default.c  ailayer_layer_normalization_default.h
src/basic/default/aimath/: aimath_f32_default.c  aimath_f32_default.h
